# edwinbu24.github.io

./: .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml
_site/: about.html
