[project]
name = "edwinbu24-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "edwinleck",email = "edwinleck@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "edwinbu24"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
